fixes overflow issue with links in the footer

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -11,7 +11,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(3rem, 1fr));
     grid-gap: 1rem;
-    width: 12rem; 
+    width: 16rem; 
     vertical-align: middle; 
     text-align: center;
     justify-self: center;
